# preflight.oceanheart.ai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.override.yml  docker-compose.yml  docker-instructions.md  main.py  package.json  pyproject.toml  repomix-output.xml
.claude/commands/: ux-baseline.md  ux-ralph.md  ux-test.md
.github/workflows/: ci.yml
apps/preflight-api/: .env.example  Dockerfile  alembic.ini  requirements.txt
apps/preflight-api/.claude/: ralph-loop.local.md
apps/preflight-api/alembic/: env.py
apps/preflight-web/: .gitignore  Dockerfile  aceternity-registry.json  add-ts-nocheck.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  register-all.ts  tailwind.config.js
docs/: PRODUCTION_ROADMAP.md
docs/specs/: aceternity-component-mapping-strategy.md  aceternity-ui-migration-change-log.md  aceternity-ui-migration-implementation-report.md  aceternity-ui-migration.prd.md  application-layout-change-log.md  application-layout-implementation-report.md  application-layout.prd.md  autonomous-roadmap.md  decision-support.md  login-page.prd.md  main-app-layout-change-log.md  main-app-layout-implementation-report.md  main-app-layout.prd.md  phase-1-foundation.prd.md  phase-2-form-system.prd.md  phase-3-llm-coaching.prd.md  project-bootstrap.prd.md  settings-page-redesign-change-log.md  settings-page-redesign-implementation-report.md  settings-page-redesign.prd.md  ui-redesign-change-log.md  ui-redesign-implementation-report.md  ui-redesign.prd.md
src/components/: TechChip.example.tsx  TechChip.svelte  TechChip.tsx
(+266 files in other folders)
